[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Amarante-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/dreamscape/MainMenu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="PC" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.690196 )
margin_left = 407.0
margin_top = 259.0
margin_right = 1047.0
margin_bottom = 641.0

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 2.0
margin_top = 2.0
margin_right = 638.0
margin_bottom = 380.0
custom_constants/separation = 5

[node name="HBC" type="HBoxContainer" parent="PC/VBC"]
margin_right = 636.0
margin_bottom = 268.0
custom_constants/separation = 20

[node name="VBC2" type="VBoxContainer" parent="PC/VBC/HBC"]
margin_right = 231.0
margin_bottom = 268.0
custom_constants/separation = 20

[node name="InfoPanels" type="Label" parent="PC/VBC/HBC/VBC2"]
margin_right = 231.0
margin_bottom = 21.0
text = "Info Panels"
align = 1

[node name="InfoPanelMC" type="MarginContainer" parent="PC/VBC/HBC/VBC2"]
margin_top = 41.0
margin_right = 231.0
margin_bottom = 90.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="PC/VBC/HBC/VBC2/InfoPanelMC"]
margin_left = 10.0
margin_right = 221.0
margin_bottom = 49.0

[node name="HBC" type="HBoxContainer" parent="PC/VBC/HBC/VBC2/InfoPanelMC/VBC"]
margin_right = 211.0
margin_bottom = 25.0

[node name="FocusStyleLabel" type="Label" parent="PC/VBC/HBC/VBC2/InfoPanelMC/VBC/HBC"]
margin_top = 2.0
margin_right = 55.0
margin_bottom = 23.0
text = "Focus: "

[node name="FocusStyle" type="OptionButton" parent="PC/VBC/HBC/VBC2/InfoPanelMC/VBC/HBC"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 203.0
margin_bottom = 25.0
text = "Large Card Preview"
items = [ "Large Card Preview", null, false, 2, null, "Info Panels Only", null, false, 3, null, "Hand Card Zoom", null, false, 0, null ]
selected = 0

[node name="ExpandLinkedTerms" type="CheckButton" parent="PC/VBC/HBC/VBC2/InfoPanelMC/VBC"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 211.0
margin_bottom = 49.0
text = "Expand Linked Terms"

[node name="Performance" type="Label" parent="PC/VBC/HBC/VBC2"]
margin_top = 110.0
margin_right = 231.0
margin_bottom = 131.0
text = "Performance"
align = 1

[node name="PerformanceMC" type="MarginContainer" parent="PC/VBC/HBC/VBC2"]
margin_top = 151.0
margin_right = 231.0
margin_bottom = 268.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="PC/VBC/HBC/VBC2/PerformanceMC"]
margin_left = 10.0
margin_right = 221.0
margin_bottom = 117.0

[node name="FancyAnimations" type="CheckButton" parent="PC/VBC/HBC/VBC2/PerformanceMC/VBC"]
unique_name_in_owner = true
margin_right = 211.0
margin_bottom = 21.0
text = "Fancy Animations"

[node name="AnimatedTextBackgrounds" type="CheckButton" parent="PC/VBC/HBC/VBC2/PerformanceMC/VBC"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 211.0
margin_bottom = 45.0
text = "Anim. Text Background"

[node name="EnableGlow" type="CheckButton" parent="PC/VBC/HBC/VBC2/PerformanceMC/VBC"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 211.0
margin_bottom = 69.0
text = "Enable Glow"

[node name="FastIconSpeed" type="CheckButton" parent="PC/VBC/HBC/VBC2/PerformanceMC/VBC"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 211.0
margin_bottom = 93.0
text = "Fast Icon Speed"

[node name="AsyncIconAnimations" type="CheckButton" parent="PC/VBC/HBC/VBC2/PerformanceMC/VBC"]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 211.0
margin_bottom = 117.0
text = "Async Icon Animations"

[node name="VBC" type="VBoxContainer" parent="PC/VBC/HBC"]
margin_left = 251.0
margin_right = 428.0
margin_bottom = 268.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="SoundMusic" type="Label" parent="PC/VBC/HBC/VBC"]
margin_right = 177.0
margin_bottom = 21.0
text = "Sound / Music"
align = 1

[node name="SoundMC" type="MarginContainer" parent="PC/VBC/HBC/VBC"]
margin_top = 41.0
margin_right = 177.0
margin_bottom = 182.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="PC/VBC/HBC/VBC/SoundMC"]
margin_left = 10.0
margin_right = 167.0
margin_bottom = 141.0

[node name="InterruptMusic" type="CheckButton" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
unique_name_in_owner = true
margin_right = 157.0
margin_bottom = 21.0
pressed = true
text = "Interrupt Music"

[node name="MainVol" type="Label" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
margin_top = 24.0
margin_right = 157.0
margin_bottom = 45.0
text = "Main Volume"

[node name="MainVolSlider" type="HSlider" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 157.0
margin_bottom = 61.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVol" type="Label" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
margin_top = 64.0
margin_right = 157.0
margin_bottom = 85.0
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
unique_name_in_owner = true
margin_top = 88.0
margin_right = 157.0
margin_bottom = 101.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundVol" type="Label" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
margin_top = 104.0
margin_right = 157.0
margin_bottom = 125.0
text = "Effects Volume"

[node name="SoundVolSlider" type="HSlider" parent="PC/VBC/HBC/VBC/SoundMC/VBC"]
margin_top = 128.0
margin_right = 157.0
margin_bottom = 141.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC3" type="VBoxContainer" parent="PC/VBC/HBC"]
margin_left = 448.0
margin_right = 636.0
margin_bottom = 268.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="AILabel" type="Label" parent="PC/VBC/HBC/VBC3"]
unique_name_in_owner = true
margin_right = 188.0
margin_bottom = 21.0
text = "Artificial Intelligence"
align = 1

[node name="AIMC" type="MarginContainer" parent="PC/VBC/HBC/VBC3"]
margin_top = 41.0
margin_right = 188.0
margin_bottom = 110.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBC" type="VBoxContainer" parent="PC/VBC/HBC/VBC3/AIMC"]
margin_left = 10.0
margin_right = 178.0
margin_bottom = 69.0

[node name="UseAI" type="CheckButton" parent="PC/VBC/HBC/VBC3/AIMC/VBC"]
unique_name_in_owner = true
margin_right = 168.0
margin_bottom = 21.0
pressed = true
text = "Use AI Stories"

[node name="AnimateCards" type="CheckButton" parent="PC/VBC/HBC/VBC3/AIMC/VBC"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 168.0
margin_bottom = 45.0
pressed = true
text = "Animate Card Art"

[node name="JudgeAI" type="CheckButton" parent="PC/VBC/HBC/VBC3/AIMC/VBC"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 168.0
margin_bottom = 69.0
pressed = true
text = "Judge AI Stories"

[node name="GenerateAI" type="CheckButton" parent="PC/VBC/HBC/VBC3/AIMC/VBC"]
unique_name_in_owner = true
visible = false
margin_top = 72.0
margin_right = 214.0
margin_bottom = 93.0
text = "Generate (Req.KoboldAI)"

[node name="HBC" type="HBoxContainer" parent="PC/VBC/HBC/VBC3/AIMC/VBC"]
visible = false
margin_top = 72.0
margin_right = 214.0
margin_bottom = 97.0

[node name="AIGenreLabel" type="Label" parent="PC/VBC/HBC/VBC3/AIMC/VBC/HBC"]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 23.0
text = "Genre: "

[node name="AIGenre" type="OptionButton" parent="PC/VBC/HBC/VBC3/AIMC/VBC/HBC"]
unique_name_in_owner = true
margin_left = 57.0
margin_right = 73.0
margin_bottom = 25.0

[node name="ExitToMain" type="Button" parent="PC/VBC"]
margin_top = 273.0
margin_right = 636.0
margin_bottom = 323.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Exit To Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="PC/VBC"]
margin_top = 328.0
margin_right = 636.0
margin_bottom = 378.0

[node name="Back" type="Button" parent="PC/VBC/HBoxContainer"]
unique_name_in_owner = true
margin_right = 636.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "BACK"

[connection signal="item_selected" from="PC/VBC/HBC/VBC2/InfoPanelMC/VBC/HBC/FocusStyle" to="." method="_on_FocusStyle_item_selected"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/InfoPanelMC/VBC/ExpandLinkedTerms" to="." method="_on_ExpandLinkedTerms_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/PerformanceMC/VBC/FancyAnimations" to="." method="_on_FancAnimations_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/PerformanceMC/VBC/AnimatedTextBackgrounds" to="." method="_on_AnimatedTextBackgrounds_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/PerformanceMC/VBC/EnableGlow" to="." method="_on_EnableGlow_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/PerformanceMC/VBC/FastIconSpeed" to="." method="_on_FastIconSpeed_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC2/PerformanceMC/VBC/AsyncIconAnimations" to="." method="_on_AsyncIcons_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC/SoundMC/VBC/InterruptMusic" to="." method="_on_InterruptMusic_toggled"]
[connection signal="value_changed" from="PC/VBC/HBC/VBC/SoundMC/VBC/MainVolSlider" to="." method="_on_MainVolSlider_value_changed"]
[connection signal="value_changed" from="PC/VBC/HBC/VBC/SoundMC/VBC/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="PC/VBC/HBC/VBC/SoundMC/VBC/SoundVolSlider" to="." method="_on_SoundVolSlider_value_changed"]
[connection signal="toggled" from="PC/VBC/HBC/VBC3/AIMC/VBC/UseAI" to="." method="_on_UseAI_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC3/AIMC/VBC/AnimateCards" to="." method="_on_AnimateCards_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC3/AIMC/VBC/JudgeAI" to="." method="_on_JudgeAI_toggled"]
[connection signal="toggled" from="PC/VBC/HBC/VBC3/AIMC/VBC/GenerateAI" to="." method="_on_GenerateAI_toggled"]
[connection signal="item_selected" from="PC/VBC/HBC/VBC3/AIMC/VBC/HBC/AIGenre" to="." method="_on_AIGenre_item_selected"]
[connection signal="pressed" from="PC/VBC/ExitToMain" to="." method="_on_ExitToMain_pressed"]
